<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/enter_pin"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"/>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pin_dots"
        android:textSize="28sp"
        app:layout_constraintTop_toBottomOf="@id/textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="12dp"/>

    <!-- Row 1 -->
    <Button
        android:id="@+id/btn1"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_1"
        android:textColor="@android:color/white"
        android:background="@drawable/circle_button"
        app:layout_constraintTop_toBottomOf="@id/textView4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btn2"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="12dp"
        />

    <Button
        android:id="@+id/btn2"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_2"
        android:textColor="@android:color/white"
        android:background="@drawable/circle_button"
        app:layout_constraintTop_toTopOf="@id/btn1"
        app:layout_constraintStart_toEndOf="@id/btn1"
        app:layout_constraintEnd_toStartOf="@id/btn3"
        android:layout_marginEnd="12dp"
        />

    <Button
        android:id="@+id/btn3"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_3"
        android:textColor="@android:color/white"
        android:background="@drawable/circle_button"
        app:layout_constraintTop_toTopOf="@id/btn1"
        app:layout_constraintStart_toEndOf="@id/btn2"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <!-- Row 2 -->
    <Button
        android:id="@+id/btn4"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_4"

        app:layout_constraintTop_toBottomOf="@id/btn1"
        app:layout_constraintStart_toStartOf="@id/btn1"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn5"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_5"

        app:layout_constraintTop_toTopOf="@id/btn4"
        app:layout_constraintStart_toStartOf="@id/btn2"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn6"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_6"

        app:layout_constraintTop_toTopOf="@id/btn4"
        app:layout_constraintStart_toStartOf="@id/btn3"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

    <!-- Row 3 -->
    <Button
        android:id="@+id/btn7"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_7"

        app:layout_constraintTop_toBottomOf="@id/btn4"
        app:layout_constraintStart_toStartOf="@id/btn4"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn8"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_8"

        app:layout_constraintTop_toTopOf="@id/btn7"
        app:layout_constraintStart_toStartOf="@id/btn5"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

    <Button
        android:id="@+id/btn9"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_9"

        app:layout_constraintTop_toTopOf="@id/btn7"
        app:layout_constraintStart_toStartOf="@id/btn6"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

    <!-- Row 4 -->
    <Button
        android:id="@+id/btn0"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:text="@string/num_0"

        app:layout_constraintTop_toBottomOf="@id/btn7"
        app:layout_constraintStart_toStartOf="@id/btn5"
        android:layout_marginTop="16dp"
        android:background="@drawable/circle_button"
        android:textColor="@android:color/white"/>

</androidx.constraintlayout.widget.ConstraintLayout>